--- a/index.html
+++ b/index.html
@@ -6,10 +6,12 @@
     <title>Document</title>
 
     <link rel="stylesheet" href="/app.css"/>
+
 </head>
 <body>
-    
-    <h1>Hello world</h1>
-    <p>I have made first commit</p>
+    <div class="myDiv">
+        <h1>Hello world</h1>
+        <p class="mytext">I have made first commit</p>
+    </div>
 </body>
 </html>
