--- a/index.html
+++ b/index.html
@@ -12,6 +12,8 @@
     <div class="myDiv">
         <h1>Hello world</h1>
         <p class="mytext">I have made first commit</p>
+        <p class="mytext">I am in Branch MAIN!</p>
+
     </div>
 </body>
 </html>
